force-app/main/default/objects/OperandTemplate__c/OperandTemplate__c.object-meta.xml
<CustomObject>
    <description>Oggetto di configurazione per la determinazione degli operandi di tempate nella funzionalità di configurazione offerta tecnica</description>
    <label>Template Operando</label>
    <nameField>
        <displayFormat>OTP-{00000000}</displayFormat>
        <label>Template Operando Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Operandi</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>