force-app/main/default/objects/OperandTemplate__c/fields/ContractTemplate__c.field-meta.xml
<CustomField>
    <fullName>ContractTemplate__c</fullName>
    <description>Campo di configurazione usato per l&apos;individuazione del Contract Template da usare per l&apos;ndividuazione dei correlati valori dei campi &quot;Operandi&quot;Tipologia&quot; ed &quot;Unita Prezzo&quot;durante la funzionalità di Configurazione Offerta Tecnica</description>
    <label>Template Contratto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>