force-app/main/default/objects/OperandTemplate__c/fields/Operands__c.field-meta.xml
<CustomField>
    <fullName>Operands__c</fullName>
    <description>Campo di configurazione usato per gestire i valori di Operandi legati al Contract Template da usare durante la funzionalità di Configurazione Offerta Tecnica</description>
    <label>Operandi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>