force-app/main/default/objects/OperandTemplate__c/fields/Typology__c.field-meta.xml
<CustomField>
    <fullName>Typology__c</fullName>
    <description>Campo di configurazione usato per gestire i valori di Tipologia al Contract Template da usare durante la funzionalità di Configurazione Offerta Tecnica</description>
    <label>Tipologia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>