force-app/main/default/objects/OperandTemplate__c/fields/UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice__c</fullName>
    <description>Campo di configurazione usato per gestire i valori di Unità prezzo al Contract Template da usare durante la funzionalità di Configurazione Offerta Tecnica</description>
    <label>Unita Prezzo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>